welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value False
  var vuBiscuit : Boolean = False
                            ^Program:5: error: not found: value True
      vuBiscuit = True
                  ^Program:12: error: not found: value True
  if (vuBiscuit == True){
                   ^Program:13: error: not found: value True
    return True
           ^