welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit : Boolean = False
  for (i <- 1 to 7){
    if (estSurBiscuit){
      vuBiscuit = True
    }
  avance()
  }
  for (i <- 1 to 7){
    recule()
  }
  if (vuBiscuit == True){
    return True
  } else {
    droite(); avance(); gauche()
  }
  return vuBiscuit
}